# supply-chain-impact-analysis-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  component_master_store.py  exploration.py  graph_viz.py  hybrid_store.py  tools.py
bom_graph/: __init__.py  domain_graphs.py  domain_lance_store.py  graph_viz.py  hybrid_store.py  lance_graph_store.py  lance_util.py  sample_bom.py  tools.py
config/: litellm.yaml
data/: README.md
docs/: agent-guide.md  agent-runtime.md  agent-skill-assets.md  demo-runbook.md  demo-verification-and-evaluation.md  development.md  enterprise-graph-design.md  federation-demo-runbook.md  graph-context.md  graph-contract.md  llm-gateway.md  local-demo-runbook.md  observability.md  ontology-levels-general.md  ontology-levels-project.md  ontology-levels.md  ontology-on-lance.md  project-layout.md  seeding.md  setup-and-demos.md  supply-chain-disruption-response.md  terminology.md  testing-and-quality.md
domains/: README.md  __init__.py  bundle.py  bundles.py  export.py  registry.py
ontology/: README.md  __init__.py  cypher_builder.py  l3_audit.py  schema.py  shacl_codegen.py
pipeline/: __init__.py
scripts/: README.md  audit_ingest_pipeline.py  audit_neo4j.py  demo.py  demo_agent.py  demo_federation.py  demo_hybrid.py  demo_interactive.py  docker_preflight.sh  eval_agent_grounding.py  repo_paths.py  run_docker_stack.sh  run_litellm_proxy.sh  seed_complex_bom.py  stack_profiles.sh  start_stack.sh  stop_stack.sh  sync_ontology.py  verify_langfuse_telemetry.py
skills/: README.md
tests/: conftest.py  test_agent.py  test_agent_grounding.py  test_cli_smoke.py  test_component_master_store.py  test_composer.py  test_connector_ingest.py  test_contract_ingest.py  test_cypher_builder.py  test_cypher_executor.py  (+27 more)
(+94 files in other folders)
