[project]
name = "bom-knowledge-graph-agent-skill"
version = "0.1.0"
description = "BOM graph exploration with LanceGraph, LanceDB, and DuckDB"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0",
  "fastapi>=0.110",
  "httpx>=0.27",
  "lancedb>=0.8",
  "numpy>=1.26",
  "pydantic>=2.8",
  "pytest>=8.2",
  "python-dotenv>=1.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
# 1.87.0rc1+ for gemini/gemini-3.5-flash; [proxy] extras for the LiteLLM server CLI
gateway = ["litellm[proxy]>=1.87.0rc1"]
observability = ["langfuse>=4.0.0,<5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bom_graph"]
